Impostazione layout e primi elementi

--- a/index.html
+++ b/index.html
@@ -4,11 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/20d53e2fb1.js" crossorigin="anonymous"></script>
     <title>
         Zoom
     </title>
 </head>
 <body>
-    <h1>Ciau</h1>
+    <section class="section">
+        <!-- Frame Video call -->
+        <div class="container videocall">
+
+        </div>
+        <!-- End Frame Video Call -->
+        <!-- Toolbar -->
+        <div class="toolbar">
+            <div class="row peripherals">
+                <div class="col peripheral">
+                    <div class="row">
+                        <div class="col peripheral-mic">
+                            <i class="fa-solid fa-microphone icon-large"></i>
+                            Mute
+                        </div>
+                        <span class="col">
+                            <i class="fa-solid fa-chevron-up"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="col peripheral">
+                    <div class="row">
+                        <div class="col peripheral-vid">
+                            <i class="fa-solid fa-video icon-large"></i>
+                            Stop Video
+                        </div>
+                        <span class="col">
+                            <i class="fa-solid fa-chevron-up"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <ul class="tools-list">
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+                <li>
+                    <div class="tool-item"></div>
+                </li>
+            </ul>
+            <div class="container-quit">
+                <span class="quit"></span>
+            </div>
+        </div>
+        <!-- End Toolbar -->
+    </section>
 </body>
 </html>
