--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="toolbar">
             <div class="row peripherals">
                 <div class="col peripheral">
-                    <div class="row">
+                    <div class="row button-action">
                         <div class="col peripheral-mic">
                             <i class="fa-solid fa-microphone icon-large"></i>
                             Mute
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="col peripheral">
-                    <div class="row">
+                    <div class="row button-action">
                         <div class="col peripheral-vid">
                             <i class="fa-solid fa-video icon-large"></i>
                             Stop Video
@@ -43,34 +43,81 @@
                     </div>
                 </div>
             </div>
-            <ul class="tools-list">
-                <li>
-                    <div class="tool-item"></div>
+            <ul class="row tools-list">
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-user-plus icon-large"></i>
+                            Invite
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-user-group icon-large"></i>
+                            Manage Partecipants
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-chart-column icon-large"></i>
+                            Polling
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <div class="row button-action">
+                                <div class="col">
+                                    <i class="fa-solid fa-share-from-square icon-large"></i>
+                                    Share screen
+                                </div>
+                                <span class="col">
+                                    <i class="fa-solid fa-chevron-up"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-comment icon-large"></i>
+                            Chat
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-record-vinyl icon-large"></i>
+                            Record
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-square icon-large"></i>
+                            Breakout Rooms
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <div class="tool-item"></div>
+                <li class="col">
+                    <div class="row">
+                        <div class="col tool-item">
+                            <i class="fa-solid fa-ellipsis icon-large"></i>
+                            More
+                        </div>
+                    </div>
                 </li>
             </ul>
-            <div class="container-quit">
-                <span class="quit"></span>
+            <div class="quit">
+                End Meeting
             </div>
         </div>
         <!-- End Toolbar -->
