Video call view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,266 @@
     <section class="section">
         <!-- Frame Video call -->
         <div class="container videocall">
+            <div class="tools">
+                <span class="tool view-mode">
+                    <i class="fa-solid fa-grid-2"></i>
+                    Speaker View
+                </span>
+                <span class="tool fullscreen-mode">
+                    <i class="fa-solid fa-arrows-maximize"></i>
+                </span>
+            </div>
+            <div class="row">
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
 
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+                <div class="col user w-1-7">
+                    <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
+                    <div class="user-info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- End Frame Video Call -->
         <!-- Toolbar -->
@@ -102,7 +361,7 @@
                 <li class="col">
                     <div class="row">
                         <div class="col tool-item">
-                            <i class="fa-solid fa-square icon-large"></i>
+                            <i class="fa-brands fa-microsoft icon-large"></i>
                             Breakout Rooms
                         </div>
                     </div>
