--- a/index.html
+++ b/index.html
@@ -24,249 +24,245 @@
                 </span>
             </div>
             <div class="row">
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
                         Pinco Pallo
                     </div>
                 </div>
-                <div class="col user w-1-7">
+                <div class="col user">
                     <img class="user-video" src="https://picsum.photos/seed/picsum/250/150" alt="frame videocall">
                     <div class="user-info">
                         <i class="fa-solid fa-microphone-slash"></i>
